<resources>
    <string name="app_name" translatable="false">CarbonTouch</string>
    <string name="exit">Quitter</string>
    <string name="buttonTest">Commencer le test</string>
    <string name="buttonLogin">Connexion</string>
    <string name="application_s_logo">Logo de l\'application</string>
    <string name="options">Options</string>
    <string name="hello">Bienvenue sur CarbonTouch ! Nous sommes ravis que vous nous rejoigniez sur le chemin d\'un avenir plus durable. </string>
    <string name="app_home_title">Calculateur d\'empreinte carbone</string>
    <string name="Profile">Profil</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="cancel">Annuler</string>
    <string name="sign_up">S\'inscrire</string>
    <string name="validate_password">Confirmer le mot de passe</string>
    <string name="login">Connexion</string>
    <string name="login_title">Connexion</string>
    <string name="login_description">Connectez-vous à votre compte CarbonTouch pour accéder à vos résultats et à vos historiques si vous en avez déjà effectué.</string>
    <string name="score">Score d\'empreinte carbone</string>
    <string name="comparison">Comparaison</string>
    <string name="average">Moyenne</string>
    <string name="result_title">Résultat</string>
    <string name="comparison_title">Comparaison</string>
    <string name="score_textview">Votre score d\'empreinte carbone est de %1$s kgCO2e/an</string>
    <string name="average_textview">La moyenne des utilisateurs est de %1$s kgCO2e/an</string>
    <string name="description_higher">Vous êtes %1$s%% plus émetteur de CO2e que la moyenne des utilisateurs</string>
    <string name="description_lower">Vous êtes %1$s%% moins émetteur de CO2e que la moyenne des utilisateurs</string>
    <string name="logout">Déconnexion</string>
    <string name="HeaderTestName">Mon Empreinte Carbone</string>
    <string name="TextGlobalWarming">Notre Planète se réchauffe, dû à l\'émission de gaz à effet de serre par l\'homme. C\'est un phénomène qui a commencé il y a plus de 100 ans et qui s\'accélère. Les scientifiques sont unanimes : il faut agir maintenant pour limiter le réchauffement climatique et ses conséquences.</string>
    <string name="TextPurposeTest">Ce test vous donne très rapidement une mesure de votre empreinte carbone. Il vous permet de connaître votre impact sur le climat et de vous comparer à la moyenne des Français.</string>
    <string name="ImageGWDesc">Une Image de la Terre avec un thermomètre à ses côtés, représentant le réchauffement climatique.</string>
    <string name="HeaderStartTest">C\'est parti ?</string>
    <string name="TextStartTest">Ceci est un test individuel.   Répondez pour vous et votre vie perso, pas pour votre travail ou vos études.   Cependant pensez à compter votre trajet domicile-travail.</string>
    <string name="scores_history">Historique des scores</string>
    <string name="previous">Précédent</string>
    <string name="next">Suivant</string>
    <string name="skip">Passer</string>
    <string name="start">Commencer</string>
    <string name="question_1">Quel est votre mode de déplacement quotidien ?</string>
    <string name="question_2">Combien de personnes vivent sous le même toit que vous?</string>
    <string name="a1_q1">Marche/Vélo</string>
    <string name="a2_q1">Transports en commun</string>
    <string name="a3_q1">Voiture Électrique</string>
    <string name="a4_q1">Voiture à essence</string>
    <string name="question_3">Combien d\'appareils électroniques possédez vous chez vous ?</string>
    <string name="a1_q2" translatable="false">1</string>
    <string name="a2_q2" translatable="false">2</string>
    <string name="a3_q2" translatable="false">3</string>
    <string name="a4_q2">4 ou plus</string>
    <string name="a1_q3" translatable="false">1-3</string>
    <string name="a2_q3" translatable="false">4-6</string>
    <string name="a3_q3" translatable="false">7-9</string>
    <string name="a4_q3">10 ou plus</string>
</resources>