<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="10dp"
            android:text="@string/HeaderTestName"
            android:textColor="@color/title_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="8sp"
            android:text="@string/TextGlobalWarming"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textStyle="italic"
            android:typeface="sans" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/ImageGWDesc"
            android:scaleType="fitCenter"
            android:src="@drawable/earthwarming" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:lineSpacingExtra="8sp"
            android:text="@string/TextPurposeTest"
            android:textAlignment="textStart"
            android:textColor="@color/description_text"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
